# pdf_processing

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pdf_processor.session.sql  pyproject.toml  rabbitmq.conf  webhook_server.py  worker.py
alembic/: env.py
alembic/versions/: 06cdf7561f62_chore_initial_tables_generation.py  a5afed23deb4_update_update_table_to_include_task_.py
docker/: entrypoint_rabbitmq.sh  init_databases.sh  init_minio.sh  init_rabbitmq.sh  init_rabbitmq_vhost.sh  redis.conf
docs/: SLO.md  rabbitmq.md  todo.md  vhost.md
infra/: alertmanager.yml  prometheus.yml  prometheus_alerts.yml  prometheus_rules.yml
src/: __init__.py
src/api/: app.py
src/api/core/: auth.py  cache.py  dependencies.py  exceptions.py  lifespan.py  metrics.py  middleware.py  ratelimit.py
src/api/routes/: __init__.py  ui.py
src/api/routes/v1/: apikeys.py  auth.py  health.py  presigned_urls.py  tasks.py
src/celery_app/: __init__.py  app.py  event_loop.py  signals.py  utils.py
src/celery_app/tasks/: processor.py
src/config/: config.py  config.yaml  settings.py
src/db/: __init__.py  init.py  models.py
src/db/repositories/: api_repository.py  apikey_repository.py  client_repository.py  task_repository.py  user_repository.py
src/observability/: telemetry.py
src/schemas/: base.py  types.py
src/schemas/db/: models.py
src/schemas/routes/: apikeys.py  health.py  routes.py
src/schemas/services/: ingestion_worker.py  storage.py  upload.py
src/schemas/tasks/: processor.py
src/services/: billing.py  draft.py  pdf_processor.py  storage.py  upload.py  webhook.py
src/services/ingestion/: base.py  ingestion_worker.py  utilities.py
src/utilities/: circuit_breaker.py  client.py  utils.py  validators.py
templates/: auth.html  upload.html
tests/: test_auth.py  test_circuit_breaker.py  test_schemas.py  test_utils.py  test_validators.py
