[project]
name = "pdf-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "celery>=5.6.2",
    "docling>=2.73.1",
    "fastapi[standard]>=0.129.0",
    "msgspec>=0.20.0",
    "omegaconf>=2.3.0",
    "pydantic-settings>=2.13.0",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = ["prek>=0.3.3", "pyrefly>=0.52.0", "ruff>=0.15.1"]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


# Pyrefly header
[tool.pyrefly]

#### configuring what to type check and where to import from
project-includes = ["src", "."]
project-excludes = ["**/.[!/.]*"]
search-path = ["."]
